# TeslaUSB

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHIME_GROUPS_FEATURE.md  CLAUDE.md  LockChimUpdate.md  README_scripts.md  cleanup.sh  config.yaml  fix_config_duplicates.sh  readme.md  setup-usb.sh  setup.sh  setup_usb.sh  todo.md  uninstall.sh  upgrade.sh
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/gadgetd/: Cargo.toml
rust/crates/gadgetd/src/: config.rs  exec.rs  handoff.rs  ipc.rs  main.rs  mediamount.rs  mutate.rs  provision.rs  queue.rs  reenum.rs
rust/crates/indexd/: Cargo.toml
rust/crates/indexd/src/: apply.rs  derive.rs  geo.rs  lib.rs  main.rs  model.rs  proto.rs  scan.rs  server.rs
rust/crates/retentiond/: Cargo.toml
rust/crates/retentiond/src/: archive.rs  archive_driver.rs  candidates.rs  config.rs  delete.rs  durability.rs  folder.rs  governor.rs  io.rs  lease.rs  lib.rs  live.rs  main.rs  manifest.rs  probe.rs  read_client.rs  recent.rs  recent_facts.rs  register_client.rs  serve.rs  status.rs  time.rs  value.rs  volume_reader.rs  volume_source.rs  watchdog.rs
rust/crates/scannerd/: Cargo.toml
rust/crates/scannerd/src/: boot.rs  clip.rs  clip_event.rs  error.rs  io.rs  lib.rs  main.rs  mbr.rs  mp4probe.rs  produce.rs  proto.rs  reader.rs  readserve.rs  record.rs  seiscan.rs  seiwalk.rs  serve.rs  stability.rs  timestamp.rs  volume.rs  walk.rs
rust/crates/schedulerd/: Cargo.toml
rust/crates/schedulerd/src/: ipc.rs  lib.rs  library.rs  main.rs  model.rs  store.rs
rust/crates/teslafat/: Cargo.toml
rust/crates/teslafat/src/: backend.rs  backing_walker.rs  config.rs  lib.rs  main.rs  retention.rs  server.rs
rust/crates/teslafat/tests/: exfat_cold_start_bench.rs  power_cut_harness.rs  sentinel.rs  smoke.rs  synth_exfat_write_integration.rs  synth_write_integration.rs
rust/crates/teslafat/units/: teslafat@.service
rust/crates/teslausb-core/: Cargo.toml
rust/crates/teslausb-core/src/: backend.rs  chime.rs  lib.rs
rust/crates/teslausb-core/tests/: cold_start_bench.rs  fs_exfat_integration.rs  fs_fat32_integration.rs
rust/crates/teslausb-worker/: Cargo.toml
rust/crates/teslausb-worker/examples/: worker.toml
rust/crates/teslausb-worker/src/: cleanup.rs  cleanup_sweep.rs  clip_event.rs  cloud_keep.rs  config.rs  indexer.rs  lib.rs  lun_pressure.rs  main.rs  mapping_overrides.rs  materializer.rs  sei.rs  storage_config.rs  store.rs  supervisor.rs  watcher.rs
rust/crates/teslausb-worker/units/: teslausb-worker.service
rust/crates/uploadd/: Cargo.toml
rust/crates/uploadd/src/: config.rs  durability.rs  engine.rs  error.rs  lease.rs  lib.rs  main.rs  priority.rs  queue.rs  rclone.rs  serve.rs  source.rs  (+4 more)
rust/crates/webd/: Cargo.toml
rust/crates/wifid/: Cargo.toml
rust/target-aarch64-out/: sei-probe  sei-probe2
teslafat/: Cargo.toml  README.md
teslafat/src/: config.rs  main.rs
teslafat/src/nbd/: handshake.rs  mod.rs
web/: README.md  pyproject.toml
web/teslausb_web/: __init__.py  app.py  config.py  wsgi.py
web/teslausb_web/blueprints/: __init__.py  _scaffold.py  analytics.py  api.py  boombox.py  captive_portal.py  cleanup.py  cloud_archive.py  jobs.py  license_plates.py  light_shows.py  lock_chimes.py  mapping.py  media.py  music.py  settings.py  settings_advanced.py  storage.py  storage_health.py  storage_retention.py  system_health.py  videos.py  wraps.py
web/teslausb_web/helpers/: __init__.py  refresh_cloud_token.py
web/teslausb_web/services/: __init__.py  boombox_service.py  cache_invalidation.py  chime_group_service.py  chime_scheduler_service.py  cloud_archive_migrations.py  cloud_archive_queries.py  cloud_generic_remote_service.py  cloud_oauth_service.py  cloud_rclone_service.py  gadget_rebind.py  gadget_state.py  license_plate_service.py  light_show_service.py  lock_chime_service.py  map_view_prefs_service.py  mapping_clip_events.py  mapping_event_derivation.py  mapping_index_prune.py  mapping_migrations.py  mapping_queries.py  mapping_settings_service.py  mapping_sql.py  mapping_trip_derivation.py  mapping_tz.py  media_availability.py  music_service.py  photo_plate_service.py  privileged_delete.py  samba_password_service.py  samba_service.py  samba_watcher.py  storage_config.py  storage_health_service.py  storage_retention_service.py  storage_stats.py  system_metrics.py  system_settings_service.py  teslafat_client.py  teslafat_messages.py  (+5 more)
web/teslausb_web/static/: tile-cache-sw.js
web/teslausb_web/templates/: _storage_health_section.html  analytics.html  base.html  boombox.html  captive_portal.html  cleanup_preview.html  cleanup_report.html  cleanup_settings.html  cloud_archive.html  event_player.html  failed_jobs.html  index.html  license_plates.html  light_shows.html  lock_chimes.html  mapping.html  media_hub_nav.html  music.html  settings_advanced.html  storage_settings.html  wraps.html
web/tests/: __init__.py  conftest.py  test_analytics_blueprint.py  test_analytics_service.py  test_api_blueprint.py  test_app_factory.py  test_boombox_blueprint.py  test_boombox_service.py  test_cache_invalidation.py  test_cache_invalidation_integration.py  test_captive_portal_blueprint.py  test_chime_group_service.py  test_chime_scheduler_service.py  test_cleanup_blueprint.py  test_cleanup_service.py  test_cloud_archive_blueprint.py  test_cloud_archive_discovery.py  test_cloud_archive_integrity.py  test_cloud_archive_migrations.py  test_cloud_archive_pipeline.py  test_cloud_archive_queries.py  test_cloud_archive_queue_ops.py  test_cloud_archive_reconcile.py  test_cloud_archive_service.py  test_cloud_archive_settings_kv.py  test_cloud_archive_uploader.py  test_cloud_archive_worker.py  test_cloud_generic_remote_service.py  test_cloud_oauth_service.py  test_cloud_rclone_service.py  test_config.py  test_gadget_rebind.py  test_gadget_rebind_skip_media_integration.py  test_gadget_state.py  test_jobs_blueprint.py  test_jobs_service.py  test_license_plate_service.py  test_license_plates_blueprint.py  test_light_show_service.py  test_light_shows_blueprint.py  (+48 more)
(+747 files in other folders)
