# TeslaUSB B-1 Rust workspace.
#
# Crates live here:
#   * teslausb-core — shared domain types: the raw exFAT read/parse
#                     path and the Tesla SEI extractor. Pure logic;
#                     no I/O dependencies.
#   * gadgetd       — guardian of the car-facing write path: owns the
#                     kernel usb_f_mass_storage gadget (file=disk.img),
#                     provisions the backing image, and brings the gadget
#                     up at boot (SPEC.md §4, §6; docs/specs/gadgetd.md).
# The remaining service crates (scannerd, indexd, webd, uploadd,
# retentiond, wifid) are added here as they are built.

[workspace]
resolver = "3"
members = [
    "crates/teslausb-core",
    "crates/gadgetd",
    "crates/scannerd",
    "crates/indexd",
    "crates/webd",
    "crates/retentiond",
    "crates/wifid",
    "crates/uploadd",
]

# Shared package metadata. Each crate inherits via `field.workspace = true`
# so version bumps and license updates land in one place.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["TeslaUSB B-1 authors"]
license = "MIT"
repository = "https://github.com/mphacker/TeslaUSB"

# Lint configuration mandated by SPEC.md §7 (Code style &
# engineering standards). Every crate inherits via
# `[lints] workspace = true`. This block must match SPEC.md §7.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
# Lint *groups* need `priority = -1` so individual lints (e.g.
# `missing_docs`) can still override their level; cargo rejects equal-
# priority group/lint pairs (clippy::lint_groups_priority).
unused = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
unwrap_used = "deny"
panic = "warn"
indexing_slicing = "warn"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

# Release profile tuned for the Pi Zero 2 W: prioritise binary size and
# steady-state perf over compile time. `panic = "abort"` shrinks the binary
# and removes unwinding tables (the daemon has no panic-recovery path
# anyway; systemd restarts on crash).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

# Dev profile keeps some optimisation so the test suite finishes in
# reasonable time on the dev box without sacrificing line-number-accurate
# debug info.
[profile.dev]
opt-level = 1
