# TeslaUSB B-1 web UI — Python project metadata + tool config.
#
# Single source of truth per charter §"Python Standards / Toolchain":
# no setup.cfg, no per-tool dotfiles, no requirements.txt. Every
# linter, type-checker, and test runner reads its config from here.

[project]
name = "teslausb-web"
version = "0.1.0"
description = "TeslaUSB B-1 web UI (Flask). UI only — daemon logic lives in the Rust crates under rust/crates/."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TeslaUSB B-1 authors" }]
keywords = ["teslausb", "tesla", "raspberry-pi", "usb-gadget"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Framework :: Flask",
]

# Runtime dependencies. Pinned to floor versions; setup.sh installs
# `web/` with `pip install -e .` so these come along automatically.
# - Flask 3.0 is the minimum that supports `MAX_FORM_MEMORY_SIZE`
#   (released 2024-01-04) — required by the upload chunk-size guard.
# - gunicorn 22 has the security fixes for HTTP request smuggling
#   (CVE-2024-1135). Earlier is forbidden.
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    # psutil >=5.9 is the floor that exposes `sensors_temperatures`
    # on Linux and works on Windows dev boxes (sensors return {} there,
    # which the system_metrics service degrades gracefully on).
    "psutil>=5.9",
]

[project.optional-dependencies]
# Installed by `setup-dev.sh` (Phase 0.6) into the developer's venv.
# Pinned to floor versions; CI uses `pip install -e .[dev]`.
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "vulture>=2.11",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "types-psutil>=5.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["teslausb_web*"]
exclude = ["tests*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter. Mirrors docs/03-CODE-QUALITY-CHARTER.md §"Lints"
# verbatim. Source of truth is the charter; this block must match it.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["teslausb_web", "tests"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes (unused imports/vars)
    "I",            # isort
    "B",            # bugbear (likely bugs)
    "C4",           # comprehensions
    "PIE",          # misc good ideas
    "RET",          # return statement issues
    "SIM",          # simplifications
    "TID",          # tidy imports
    "TCH",          # type-checking-only imports
    "ARG",          # unused arguments
    "PTH",          # use pathlib
    "ERA",          # eradicate commented code
    "PL",           # pylint subset
    "RUF",          # ruff-specific
    "UP",           # pyupgrade
    "ANN",          # missing type annotations
    "S",            # bandit (security)
    "T20",          # no print()
    "BLE",          # no blind except
    "FBT",          # boolean trap (positional bool args)
    "DTZ",          # datetime timezone awareness
    "PT",           # pytest style
    "Q",            # quotes
    "ICN",          # import conventions
    "G",            # logging format
    "LOG",          # logging usage
    "PERF",         # perf antipatterns
]
ignore = [
    # ANN101 / ANN102 (self / cls annotations) were removed in
    # ruff 0.5+; they're no-ops now. The charter once listed them
    # explicitly but the rules no longer exist — see
    # docs/03-CODE-QUALITY-CHARTER.md §"Lints". Empty `ignore`
    # documents the intent: no charter-mandated rule suppressions.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",      # asserts OK in tests
    "PLR2004",   # magic numbers OK in tests
    "S105",      # tests can ship fake secret-key strings
    "S106",      # ditto for keyword args
    "S107",      # ditto for default-arg secret strings
    "PLC0415",   # tests can do local imports to override module constants
    "ARG001",    # pytest fixtures often look unused but aren't (sys.path/monkeypatch)
]

# ---------------------------------------------------------------------------
# mypy — strict type checking. Mirrors charter §"Lints" + §"Type discipline".
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_explicit = true        # ban explicit `Any` typing
no_implicit_optional = true
check_untyped_defs = true
files = ["teslausb_web", "tests"]

# ---------------------------------------------------------------------------
# pytest — strict markers + strict config. Coverage gate is a CI flag,
# not a default addopt, because empty packages report 0% and would
# block work-in-progress increments.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ---------------------------------------------------------------------------
# Coverage — used when CI / pre-commit pass `--cov=teslausb_web`.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["teslausb_web"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
