[package]
name = "gadgetd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CRITICAL invariant guardian: owns the kernel usb_f_mass_storage gadget backed by file=disk.img (the car-facing write path). Brings the gadget up at boot, reports status, and tears it down cleanly. No userspace in the steady-state write path."

[lints]
workspace = true

# IPC (control daemon) only. serde/serde_json frame the typed UDS request/
# response (`gadgetd serve`); they are not on the steady-state write path.
# libc gives the hardening primitives the handoff needs: O_NOFOLLOW on caller-
# supplied source files, SO_PEERCRED authz on the socket, and syncfs(2).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
sha2 = "0.10"

[[bin]]
name = "gadgetd"
path = "src/main.rs"
