[package]
name = "teslafat"
description = "Userspace FAT/exFAT synthesizer + NBD server for the TeslaUSB B-1 USB gadget endpoint."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "teslafat"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Error handling at the binary boundary. `anyhow::Context` lets us
# attach the offending config path to I/O / parse errors so the
# tracing `error!` line names the file the operator should look at.
# Library types in `teslausb-core` (Phase 1.2+) will use `thiserror`
# so callers see typed errors; `anyhow` stays scoped to the binary.
anyhow = "1.0"

# CLI argument parsing. `derive` feature keeps the `Args` struct in
# one declarative place.
clap = { version = "4.5", features = ["derive"] }

# Config file format. The pre-B-1 draft at `teslafat/` used YAML; the
# rewrite standardises on TOML so config and `Cargo.toml` share one
# syntax and the validator can rely on TOML's typed integer/string
# distinctions (no YAML stringly-typed scalar guesswork). See
# `docs/adr/0001-config-format-toml.md`.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime. The daemon serves 1–2 NBD connections (one per LUN)
# plus 1 IPC control socket, so the current-thread runtime is
# enough; `rt-multi-thread` would just burn RAM on the Pi Zero 2 W.
# Features:
# - `rt` + `net` + `io-util` + `macros`: handshake + transmission
#   (Phases 1.3 + 1.5).
# - `time`: handshake-timeout safety net + accept-loop pacing
#   (Phase 1.6 — closes the inc-1.3 follow-up TODO).
# - `signal`: SIGTERM / SIGINT handling for clean systemd stop
#   (Phase 1.6).
# - `sync`: `oneshot` channel that plumbs the signal handler into
#   the server's `tokio::select!` shutdown branch (Phase 1.6).
# See ADR-0003.
tokio = { version = "1.40", default-features = false, features = ["rt", "net", "io-util", "macros", "time", "signal", "sync"] }

# Structured logging — JSON to stderr so journald captures every
# field as a structured key. Level via `RUST_LOG` per charter
# `tracing` discipline; default is `info` when unset.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Domain-core types: the `BlockBackend` trait + `WriteFlags` +
# `BackendError` that the Phase 1.5 transmission loop dispatches
# against. `path = ` keeps the workspace self-contained; the
# dependency direction is binary → core, never the reverse (ADR
# 0003).
teslausb-core = { path = "../teslausb-core" }

# Typed errors at module boundaries inside the binary crate, per
# charter §"Rust standards" line 222. The outer-layer `main.rs`
# may use `anyhow::Result` for ergonomic propagation, but library-
# style modules within this binary (Phase 3.3 `backend::dir_tree`
# and later) expose typed errors derived with `thiserror`. Adopted
# in Phase 3.3.
thiserror = "1.0"

[dev-dependencies]
# Integration test runs the compiled binary against a fixture TOML
# and greps stderr for the "started" sentinel line that Phase 1.1
# promises.
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
