[package]
name = "teslausb-core"
description = "Shared domain types for the TeslaUSB B-1 reset: the raw exFAT read/parse path and the Tesla SEI extractor. No I/O dependencies."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# Domain-types crate (SPEC.md §7): pure logic, no I/O. `thiserror`
# for typed library errors is the only run-time dependency at this
# layer.
[dependencies]
# Typed library errors per SPEC.md §7 — `thiserror` at the lib
# boundary, `anyhow` only at the binary outer layer.
thiserror = "1.0"

[lints]
workspace = true
