[package]
name = "teslausb-worker"
description = "Background retention + cloud-sync + indexer worker for TeslaUSB B-1. Talks to teslafat via the teslausb-core IPC envelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "teslausb-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Domain-core: SEI primitives (mp4/nal/payload/tesla) + future
# IPC types. The dependency direction is binary → core (ADR 0003).
teslausb-core = { path = "../teslausb-core" }

# Typed errors at module boundaries inside the binary crate, per
# charter §"Rust standards". The outer-layer `main.rs` may use
# `anyhow::Result`; library-style modules inside the binary expose
# typed errors via thiserror.
thiserror = "1.0"

# Outer-binary error ergonomics. `main.rs` may use `anyhow::Result`
# so the operator-facing error message names the offending config
# path / DB file with `.context(...)`. Library modules expose typed
# errors via thiserror; the boundary is enforced by review.
anyhow = "1.0"

# CLI argument parsing for `main.rs` (Phase 4b.4 supervisor).
clap = { version = "4.5", features = ["derive"] }

# Config file format: TOML (ADR-0001). Matches teslafat's config.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Indexer waypoint / clip store. SQLite via rusqlite with the
# `bundled` feature so cross-build does NOT require a system
# libsqlite3-dev on the target sysroot and the produced binary
# carries no runtime apt-package dependency. See ADR-0010.
rusqlite = { version = "0.31", features = ["bundled"] }

# Structured logging to stderr → journald. Matches teslafat.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.10"
