[package]
name = "teslausb-worker"
description = "Background retention + cloud-sync + indexer worker for TeslaUSB B-1. Talks to teslafat via the teslausb-core IPC envelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "teslausb-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Domain-core: SEI primitives (mp4/nal/payload/tesla) + future
# IPC types. The dependency direction is binary → core (ADR 0003).
teslausb-core = { path = "../teslausb-core" }

# Typed errors at module boundaries inside the binary crate, per
# charter §"Rust standards". The outer-layer `main.rs` may use
# `anyhow::Result`; library-style modules inside the binary expose
# typed errors via thiserror.
thiserror = "1.0"

# Outer-binary error ergonomics. `main.rs` may use `anyhow::Result`
# so the operator-facing error message names the offending config
# path / DB file with `.context(...)`. Library modules expose typed
# errors via thiserror; the boundary is enforced by review.
anyhow = "1.0"

# CLI argument parsing for `main.rs` (Phase 4b.4 supervisor).
clap = { version = "4.5", features = ["derive"] }

# Config file format: TOML (ADR-0001). Matches teslafat's config.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Indexer waypoint store. SQLite via rusqlite with the
# `bundled` feature so cross-build does NOT require a system
# libsqlite3-dev on the target sysroot and the produced binary
# carries no runtime apt-package dependency. See ADR-0010.
rusqlite = { version = "0.31", features = ["bundled"] }

# Structured logging to stderr → journald. Matches teslafat.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Linux inotify(7) bindings for the clip watcher (Phase 4b.2b).
# Direct `IN_CLOSE_WRITE` / `IN_MOVED_TO` mask avoids the
# "was the write complete?" race that polling or notify's
# coarser Modify event would force. See ADR-0011. The crate
# is Linux-only; non-Linux builds compile the pure-logic
# half of `watcher` and cfg-gate out the `ClipWatcher` type.
[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"
# Safe POSIX bindings for statvfs(3) — the cleanup worker's
# free-space-pressure check. Chosen over direct libc so the
# cleanup module stays `unsafe`-free; the workspace lint
# `unsafe_code = "deny"` would otherwise force a per-block
# allow on every libc call. See ADR-0012.
rustix = { version = "0.38", features = ["fs"] }

[dependencies.tokio]
version = "1.36"
# Current-thread reactor + signal + interval + select! macro
# + Mutex/Notify primitives. The `net` feature is what gates
# Builder::enable_io / enable_all — signal::unix routes its
# notifications through the reactor's IO driver. No
# `rt-multi-thread` — the supervisor runs on a single async
# thread plus the blocking pool. See ADR-0013.
features = ["rt", "macros", "signal", "time", "sync", "net"]

[dev-dependencies]
tempfile = "3.10"
